manifests/worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker1
  namespace: application1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker1
  template:
    metadata:
      labels:
        app: worker1
        # azure.workload.identity/use: "true"
    spec:
      # serviceAccountName: worker1-sa
      containers:
      - name: c1
        image: acrswiggy.azurecr.io/worker:latest
