manifests/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api1
  namespace: application1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api1
  template:
    metadata:
      labels:
        app: api1
    spec:
      nodeSelector:
        agentpool: agentpool  # <-- This targets the specific node pool
      containers:
      - name: c1
        image: acrswiggy.azurecr.io/backend:latest
---
apiVersion: v1
kind: Service
metadata:
  name: demoapp-svc-ext
  namespace: application1
spec:
  type: ClusterIP
  # externalTrafficPolicy: Local
  selector:
    app: api1
  ports:
    - name: http
      port: 80
      targetPort: 8000
